--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npx ts-node-dev src/backend/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,8 +14,12 @@
     "@types/express": "^4.17.21",
     "@types/typescript": "^2.0.0",
     "eslint": "^8.53.0",
+    "prettier": "^3.1.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
